# advent-of-code-2020

./: .gitignore  Cargo.toml  README.md  day_ten.txt  gen_coverage.sh  output.txt  run.sh
2019/: Cargo.toml  run.sh
2019/src/: day_fifteen.rs  day_five.rs  day_four.rs  day_fourteen.rs  day_nine.rs  day_one.rs  day_seven.rs  day_seventeen.rs  day_six.rs  day_sixteen.rs  day_skel.rs  day_ten.rs  day_thirteen.rs  day_three.rs  day_two.rs  lib.rs  loadable.rs  runtime.rs
input/: day_nineteen_example.txt
notes/: day_eighteen.txt  day_nineteen.txt  day_seven.txt  day_seventeen.txt
src/: christmas_eve.rs  day.rs  day_eight.rs  day_eighteen.rs  day_eleven.rs  day_fifteen.rs  day_five.rs  day_four.rs  day_fourteen.rs  day_nine.rs  day_nineteen.rs  day_one.rs  day_seven.rs  day_seventeen.rs  day_six.rs  day_sixteen.rs  day_skel.rs  day_ten.rs  day_thirteen.rs  day_three.rs  day_twelve.rs  day_twenty.rs  day_twenty_one.rs  day_twenty_three.rs  day_twenty_two.rs  day_two.rs  geometry.rs  intcode_computer.rs  lib.rs  loadable.rs  main.rs  validity.rs  yet_another_geometry_mod.rs
