[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Jordan Bayles <jophba@chromium.org>"]
edition = "2018"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "advent_of_code"
path = "src/bin/main.rs"

[profile.release]
debug = true

[dependencies]
geo = "0.12.2"
line_intersection = "0.4.0"
permutator = "0.3.3"
