[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Jordan Bayles <jophba@chromium.org>"]
edition = "2018"

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "advent_of_code"
path = "src/bin/main.rs"

[profile.release]
debug = true

[dependencies]
geo = "0.12.2"
line_intersection = "0.4.0"
permutator = "0.3.3"
log = "0.4.8"
queues = "1.1.0"
num-traits = "0.2.10"
fraction = "0.6.2"
ordered-float = "1.0.2"
num_enum = "0.4.2"
num = "0.2.0"
regex = "1.3.1"
lazy_static = "1.4.0"
ansi_term = "0.12.1"
